# Tests CMakeLists.txt
# 
# This file can be used to add unit tests for the project
# Currently empty - tests can be added later

# Example of how to add tests:
# find_package(GTest REQUIRED)
# 
# add_executable(test_main test_main.cpp)
# target_link_libraries(test_main 
#     opencv_core 
#     opencv_imgproc 
#     opencv_imgcodecs 
#     GTest::gtest_main
# )
# 
# add_test(NAME MainTest COMMAND test_main)
